# glorypicks

./: .env.example  .gitignore  AGENTS.md  BUN_MIGRATION_SUMMARY.md  BUN_START.md  FRONTEND_FIXES.md  MEDIUM_PRIORITY_COMPLETE.md  MISSING_FEATURES.md  QUICKSTART.md  README.md  ROADMAP_REMAINING.md  SECURITY.md  SECURITY_FINAL_REPORT.md  SECURITY_FIXES_SUMMARY.md  STATUS.md  backend.env.example  docker-compose.yml  frontend.env.example  quick_test.py  start-bun.ps1  start.sh  test_backend.py
GloryPicks_planning_scaffold/: PLAN.md  PRINCIPLES.md  README.md  SPEC.md  TASKS.md  VISION.md  (+1 more)
backend/: .env.example  .env.example.backend  .gitignore  pyproject.toml  requirements.txt  setup_keys.py  test_phase1_enhancements.py
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  alphavantage.py  base.py  binance.py  binance_ws.py  demo.py  finnhub.py  finnhub_ws.py
backend/app/engine/: __init__.py  __init___fixed.py  ai_enhancer.py  ict_phase1_enhancements.py  ict_strategies.py  kill_zones.py  killzone_performance.py  smc_strategies.py
backend/app/indicators/: __init__.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  alert.py  journal.py  watchlist.py
backend/app/routers/: __init__.py  alerts.py  data.py  dependencies.py  health.py  journal.py  signal.py  watchlist.py  websocket.py
backend/app/services/: __init__.py  alert_service.py  base.py  journal_service.py  watchlist_service.py
backend/app/utils/: __init__.py  cache.py  validation.py
backend/tests/: __init__.py  test_api.py  test_indicators.py
(+61 files in other folders)
